// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AvailableSettings /> should display spinner 1`] = `
<div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Available Settings
    </h2>
    <p>
      A new OpenVPN client instance is created for each uploaded file. Please recheck the settings file if the instance is enabled and not running in a few minutes after the setup.
    </p>
    <div
      class="spinner-wrapper my-3 text-center"
    >
      <div
        class="spinner-border"
        role="status"
      >
        <span
          class="sr-only"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<AvailableSettings /> should handle PUT ruequest in a modal after hititng 'Save' button 1`] = `
<div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Available Settings
    </h2>
    <p>
      A new OpenVPN client instance is created for each uploaded file. Please recheck the settings file if the instance is enabled and not running in a few minutes after the setup.
    </p>
    <div
      class="table-responsive"
    >
      <table
        class="table table-hover mb-0"
      >
        <thead
          class="thead-light"
        >
          <tr>
            <th>
              Instances
            </th>
            <th
              aria-label="Actions"
              class="text-center"
              scope="col"
            />
            <th
              aria-label="Actions"
              class="text-end"
              scope="col"
            />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="align-middle"
            >
              <div
                class="form-check form-switch mb-3 null"
              >
                <input
                  checked=""
                  class="form-check-input"
                  id="1"
                  role="switch"
                  type="checkbox"
                />
                <label
                  class="form-check-label"
                  for="1"
                >
                  A1
                </label>
              </div>
            </td>
            <td
              class="align-middle text-center"
            >
              Running
              <button
                aria-label="Check status"
                class="btn btn btn-sm d-inline-flex justify-content-center align-items-center"
                title="Check status"
                type="button"
              >
                <span>
                  <i
                    class="fa fa-redo"
                  />
                </span>
              </button>
            </td>
            <td
              class="text-end"
            >
              <div
                aria-label="Actions"
                class="btn-group btn-group-sm mb-0"
                role="group"
              >
                <button
                  class="btn btn-primary d-inline-flex justify-content-center align-items-center"
                  type="button"
                >
                  <span>
                    <span
                      class="d-xl-none"
                    >
                      <i
                        class="fas fa-edit fa-sm"
                      />
                    </span>
                    <span
                      class="d-none d-xl-block"
                    >
                      <i
                        class="fas fa-edit fa-sm me-1"
                      />
                      Edit
                    </span>
                  </span>
                </button>
                <button
                  class="btn btn-danger d-inline-flex justify-content-center align-items-center"
                  type="button"
                >
                  <span>
                    <span
                      class="d-xl-none"
                    >
                      <i
                        class="fas fa-trash fa-sm"
                      />
                    </span>
                    <span
                      class="d-none d-xl-block"
                    >
                      <i
                        class="fas fa-trash fa-sm me-1"
                      />
                      Delete
                    </span>
                  </span>
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    id="modal-container"
  >
    <div
      class="modal fade show"
      role="dialog"
    >
      <div
        class="modal-dialog modal-dialog-centered modal-dialog-scrollable"
        role="document"
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <h5
              class="modal-title"
            >
              Edit Client Settings
            </h5>
            <button
              aria-label="Close"
              class="btn-close"
              type="button"
            />
          </div>
          <div
            class="modal-body"
          >
            <div
              class="mb-3"
            >
              <label
                class="form-label"
                for="2"
              >
                Username
              </label>
              <div
                class="input-group"
              >
                <input
                  class="form-control"
                  disabled=""
                  id="2"
                  type="text"
                  value="new_user"
                />
              </div>
            </div>
            <div
              class="mb-3"
            >
              <label
                class="form-label"
                for="3"
              >
                Password
              </label>
              <div
                class="input-group"
              >
                <input
                  autocomplete="current-password"
                  class="form-control"
                  disabled=""
                  id="3"
                  type="password"
                  value="testpass"
                />
                <button
                  class="input-group-text"
                  type="button"
                >
                  <i
                    class="fa fa-eye"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="btn btn-secondary d-inline-flex justify-content-center align-items-center"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
            <button
              class="btn btn-primary d-inline-flex justify-content-center align-items-center"
              type="button"
            >
              <span>
                Save
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AvailableSettings /> should render a modal of a particular settings after hititng 'Edit' button 1`] = `
<div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Available Settings
    </h2>
    <p>
      A new OpenVPN client instance is created for each uploaded file. Please recheck the settings file if the instance is enabled and not running in a few minutes after the setup.
    </p>
    <div
      class="table-responsive"
    >
      <table
        class="table table-hover mb-0"
      >
        <thead
          class="thead-light"
        >
          <tr>
            <th>
              Instances
            </th>
            <th
              aria-label="Actions"
              class="text-center"
              scope="col"
            />
            <th
              aria-label="Actions"
              class="text-end"
              scope="col"
            />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="align-middle"
            >
              <div
                class="form-check form-switch mb-3 null"
              >
                <input
                  checked=""
                  class="form-check-input"
                  id="1"
                  role="switch"
                  type="checkbox"
                />
                <label
                  class="form-check-label"
                  for="1"
                >
                  A1
                </label>
              </div>
            </td>
            <td
              class="align-middle text-center"
            >
              Running
              <button
                aria-label="Check status"
                class="btn btn btn-sm d-inline-flex justify-content-center align-items-center"
                title="Check status"
                type="button"
              >
                <span>
                  <i
                    class="fa fa-redo"
                  />
                </span>
              </button>
            </td>
            <td
              class="text-end"
            >
              <div
                aria-label="Actions"
                class="btn-group btn-group-sm mb-0"
                role="group"
              >
                <button
                  class="btn btn-primary d-inline-flex justify-content-center align-items-center"
                  type="button"
                >
                  <span>
                    <span
                      class="d-xl-none"
                    >
                      <i
                        class="fas fa-edit fa-sm"
                      />
                    </span>
                    <span
                      class="d-none d-xl-block"
                    >
                      <i
                        class="fas fa-edit fa-sm me-1"
                      />
                      Edit
                    </span>
                  </span>
                </button>
                <button
                  class="btn btn-danger d-inline-flex justify-content-center align-items-center"
                  type="button"
                >
                  <span>
                    <span
                      class="d-xl-none"
                    >
                      <i
                        class="fas fa-trash fa-sm"
                      />
                    </span>
                    <span
                      class="d-none d-xl-block"
                    >
                      <i
                        class="fas fa-trash fa-sm me-1"
                      />
                      Delete
                    </span>
                  </span>
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    id="modal-container"
  >
    <div
      class="modal fade show"
      role="dialog"
    >
      <div
        class="modal-dialog modal-dialog-centered modal-dialog-scrollable"
        role="document"
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <h5
              class="modal-title"
            >
              Edit Client Settings
            </h5>
            <button
              aria-label="Close"
              class="btn-close"
              type="button"
            />
          </div>
          <div
            class="modal-body"
          >
            <div
              class="mb-3"
            >
              <label
                class="form-label"
                for="2"
              >
                Username
              </label>
              <div
                class="input-group"
              >
                <input
                  class="form-control"
                  id="2"
                  type="text"
                  value="user"
                />
              </div>
            </div>
            <div
              class="mb-3"
            >
              <label
                class="form-label"
                for="3"
              >
                Password
              </label>
              <div
                class="input-group"
              >
                <input
                  autocomplete="current-password"
                  class="form-control"
                  id="3"
                  type="password"
                  value="password"
                />
                <button
                  class="input-group-text"
                  type="button"
                >
                  <i
                    class="fa fa-eye"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="btn btn-secondary d-inline-flex justify-content-center align-items-center"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
            <button
              class="btn btn-primary d-inline-flex justify-content-center align-items-center"
              type="button"
            >
              <span>
                Save
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AvailableSettings /> should render info when there are no clients 1`] = `
<div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Available Settings
    </h2>
    <p>
      A new OpenVPN client instance is created for each uploaded file. Please recheck the settings file if the instance is enabled and not running in a few minutes after the setup.
    </p>
    <p
      class="text-muted text-center"
    >
      There are no settings added yet.
    </p>
  </div>
  <div
    id="modal-container"
  >
    <div
      class="modal fade"
      role="dialog"
    >
      <div
        class="modal-dialog modal-dialog-centered modal-dialog-scrollable"
        role="document"
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <h5
              class="modal-title"
            >
              Edit Client Settings
            </h5>
            <button
              aria-label="Close"
              class="btn-close"
              type="button"
            />
          </div>
          <div
            class="modal-body"
          >
            <div
              class="spinner-wrapper text-center"
            >
              <div
                class="spinner-border"
                role="status"
              >
                <span
                  class="sr-only"
                />
              </div>
            </div>
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="btn btn-secondary d-inline-flex justify-content-center align-items-center"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
            <button
              class="btn btn-primary d-inline-flex justify-content-center align-items-center"
              disabled=""
              type="button"
            >
              <span>
                Save
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AvailableSettings /> should render table of settings 1`] = `
<div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Available Settings
    </h2>
    <p>
      A new OpenVPN client instance is created for each uploaded file. Please recheck the settings file if the instance is enabled and not running in a few minutes after the setup.
    </p>
    <div
      class="table-responsive"
    >
      <table
        class="table table-hover mb-0"
      >
        <thead
          class="thead-light"
        >
          <tr>
            <th>
              Instances
            </th>
            <th
              aria-label="Actions"
              class="text-center"
              scope="col"
            />
            <th
              aria-label="Actions"
              class="text-end"
              scope="col"
            />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="align-middle"
            >
              <div
                class="form-check form-switch mb-3 null"
              >
                <input
                  checked=""
                  class="form-check-input"
                  id="1"
                  role="switch"
                  type="checkbox"
                />
                <label
                  class="form-check-label"
                  for="1"
                >
                  A1
                </label>
              </div>
            </td>
            <td
              class="align-middle text-center"
            >
              Running
              <button
                aria-label="Check status"
                class="btn btn btn-sm d-inline-flex justify-content-center align-items-center"
                title="Check status"
                type="button"
              >
                <span>
                  <i
                    class="fa fa-redo"
                  />
                </span>
              </button>
            </td>
            <td
              class="text-end"
            >
              <div
                aria-label="Actions"
                class="btn-group btn-group-sm mb-0"
                role="group"
              >
                <button
                  class="btn btn-primary d-inline-flex justify-content-center align-items-center"
                  type="button"
                >
                  <span>
                    <span
                      class="d-xl-none"
                    >
                      <i
                        class="fas fa-edit fa-sm"
                      />
                    </span>
                    <span
                      class="d-none d-xl-block"
                    >
                      <i
                        class="fas fa-edit fa-sm me-1"
                      />
                      Edit
                    </span>
                  </span>
                </button>
                <button
                  class="btn btn-danger d-inline-flex justify-content-center align-items-center"
                  type="button"
                >
                  <span>
                    <span
                      class="d-xl-none"
                    >
                      <i
                        class="fas fa-trash fa-sm"
                      />
                    </span>
                    <span
                      class="d-none d-xl-block"
                    >
                      <i
                        class="fas fa-trash fa-sm me-1"
                      />
                      Delete
                    </span>
                  </span>
                </button>
              </div>
            </td>
          </tr>
          <tr>
            <td
              class="align-middle"
            >
              <div
                class="form-check form-switch mb-3 null"
              >
                <input
                  class="form-check-input"
                  id="2"
                  role="switch"
                  type="checkbox"
                />
                <label
                  class="form-check-label"
                  for="2"
                >
                  A2
                </label>
              </div>
            </td>
            <td
              class="align-middle text-center"
            />
            <td
              class="text-end"
            >
              <div
                aria-label="Actions"
                class="btn-group btn-group-sm mb-0"
                role="group"
              >
                <button
                  class="btn btn-primary d-inline-flex justify-content-center align-items-center"
                  type="button"
                >
                  <span>
                    <span
                      class="d-xl-none"
                    >
                      <i
                        class="fas fa-edit fa-sm"
                      />
                    </span>
                    <span
                      class="d-none d-xl-block"
                    >
                      <i
                        class="fas fa-edit fa-sm me-1"
                      />
                      Edit
                    </span>
                  </span>
                </button>
                <button
                  class="btn btn-danger d-inline-flex justify-content-center align-items-center"
                  type="button"
                >
                  <span>
                    <span
                      class="d-xl-none"
                    >
                      <i
                        class="fas fa-trash fa-sm"
                      />
                    </span>
                    <span
                      class="d-none d-xl-block"
                    >
                      <i
                        class="fas fa-trash fa-sm me-1"
                      />
                      Delete
                    </span>
                  </span>
                </button>
              </div>
            </td>
          </tr>
          <tr>
            <td
              class="align-middle"
            >
              <div
                class="form-check form-switch mb-3 null"
              >
                <input
                  checked=""
                  class="form-check-input"
                  id="3"
                  role="switch"
                  type="checkbox"
                />
                <label
                  class="form-check-label"
                  for="3"
                >
                  B1
                </label>
              </div>
            </td>
            <td
              class="align-middle text-center"
            >
              Running
              <button
                aria-label="Check status"
                class="btn btn btn-sm d-inline-flex justify-content-center align-items-center"
                title="Check status"
                type="button"
              >
                <span>
                  <i
                    class="fa fa-redo"
                  />
                </span>
              </button>
            </td>
            <td
              class="text-end"
            >
              <div
                aria-label="Actions"
                class="btn-group btn-group-sm mb-0"
                role="group"
              >
                <button
                  class="btn btn-primary d-inline-flex justify-content-center align-items-center"
                  type="button"
                >
                  <span>
                    <span
                      class="d-xl-none"
                    >
                      <i
                        class="fas fa-edit fa-sm"
                      />
                    </span>
                    <span
                      class="d-none d-xl-block"
                    >
                      <i
                        class="fas fa-edit fa-sm me-1"
                      />
                      Edit
                    </span>
                  </span>
                </button>
                <button
                  class="btn btn-danger d-inline-flex justify-content-center align-items-center"
                  type="button"
                >
                  <span>
                    <span
                      class="d-xl-none"
                    >
                      <i
                        class="fas fa-trash fa-sm"
                      />
                    </span>
                    <span
                      class="d-none d-xl-block"
                    >
                      <i
                        class="fas fa-trash fa-sm me-1"
                      />
                      Delete
                    </span>
                  </span>
                </button>
              </div>
            </td>
          </tr>
          <tr>
            <td
              class="align-middle"
            >
              <div
                class="form-check form-switch mb-3 null"
              >
                <input
                  class="form-check-input"
                  id="4"
                  role="switch"
                  type="checkbox"
                />
                <label
                  class="form-check-label"
                  for="4"
                >
                  B2
                </label>
              </div>
            </td>
            <td
              class="align-middle text-center"
            />
            <td
              class="text-end"
            >
              <div
                aria-label="Actions"
                class="btn-group btn-group-sm mb-0"
                role="group"
              >
                <button
                  class="btn btn-primary d-inline-flex justify-content-center align-items-center"
                  type="button"
                >
                  <span>
                    <span
                      class="d-xl-none"
                    >
                      <i
                        class="fas fa-edit fa-sm"
                      />
                    </span>
                    <span
                      class="d-none d-xl-block"
                    >
                      <i
                        class="fas fa-edit fa-sm me-1"
                      />
                      Edit
                    </span>
                  </span>
                </button>
                <button
                  class="btn btn-danger d-inline-flex justify-content-center align-items-center"
                  type="button"
                >
                  <span>
                    <span
                      class="d-xl-none"
                    >
                      <i
                        class="fas fa-trash fa-sm"
                      />
                    </span>
                    <span
                      class="d-none d-xl-block"
                    >
                      <i
                        class="fas fa-trash fa-sm me-1"
                      />
                      Delete
                    </span>
                  </span>
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    id="modal-container"
  >
    <div
      class="modal fade"
      role="dialog"
    >
      <div
        class="modal-dialog modal-dialog-centered modal-dialog-scrollable"
        role="document"
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <h5
              class="modal-title"
            >
              Edit Client Settings
            </h5>
            <button
              aria-label="Close"
              class="btn-close"
              type="button"
            />
          </div>
          <div
            class="modal-body"
          >
            <div
              class="spinner-wrapper text-center"
            >
              <div
                class="spinner-border"
                role="status"
              >
                <span
                  class="sr-only"
                />
              </div>
            </div>
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="btn btn-secondary d-inline-flex justify-content-center align-items-center"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
            <button
              class="btn btn-primary d-inline-flex justify-content-center align-items-center"
              disabled=""
              type="button"
            >
              <span>
                Save
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
